# goob_ai

./: .aider.conf.yml  .aiderignore  .cursorignore  .cursorrules  .cz-config.js  .dockerignore  .editorconfig  .gitignore  .markdownlint.yaml  .opencommitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  .relint.yml  .shellcheckrc  .sourcery.yaml  .sourcery.yaml.bak  .yamllint.yaml  CEREBRO_TEST.md  CONTRIBUTING.md  CUSTOM_TOOLS_STUDY.md  DATA_EXAMPLES.md  DEBBUGER_AIDER.md  DEBUG.md  DEBUG_GOOB.md  DOCS.md  Dockerfile  Justfile  PROMPT_STUDY.md  README.md  REFERENCES.md  SNIPPETS.md  VECTORSTORE_STUDY.md  codecov.yml  cursor_share_your_rules_for_ai.md  cursor_share_your_rules_for_ai.txt  detect_pytest_live_logging.sh  docker-compose.yml  env.sample  file.out  (+17 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/dependabot/: requirements-dev.txt  requirements.txt
.github/workflows/: check-pull-request.yml  ci-upgrade.yml  ci.yml  code-check.yml  docs.yml  publish.yml  release-drafter.yml  release.yml  sync-labels.yml  tmate-mac.yml  tmate.yml
.prompts.d/: annotations.txt  docs.txt
changelog.d/: towncrier_template.md.jinja
containers/: README.md
containers/chromadb/: Dockerfile
contrib/: .ptpython_config.py  .pyenv_compile_env_brew  00-better_exceptions.py  00-set-traceback-mode.py  admincog.py  direnvrc  env-setup  is-gpu-available.py  opencv-deps.sh  rye-add-all.sh  settings-vscode-bak.json  settings.json
contrib/modules/: auditlogchannel.py
doc/en/: conf.py  license.rst
docker/grafana/: grafana.ini
docker/kafka/: README.md
docker/otelcollector/: otelcol-config.yml
docker/prometheus/: prometheus-config.yaml
docs/: acknowledgement.md  changelog.md  dev.md  index.md  integration.txt  prompt_engineering.md  pyenv.md  testing.md  utilities.md  vcr.md  versioning.md
hack/: README.md
hack/hooks/: detect_pytest_live_logging.sh
hack/ide-configs/: README.md
hack/ide-configs/vscode/: README.md  extensions.json  launch.json  settings.json
hack/jsonschema/: pyproject.json
notebooks/: 4 - RAG.ipynb  4_RAG.ipynb  README.md  agent.ipynb  context_enrichment_window_around_chunk.ipynb  langgraph.ipynb
notebooks/example_data/: state_of_the_union.txt
scripts/: Dockerfile.jekyll  blame.py  compress-discord.sh  createstubs.sh  download_readthedocs.sh  generate_langsmith_dataset_climate_change.py  jekyll_run.sh  manhole-shell  mock_patch_checker.py  open-browser.py  q_a.json  unittest-local
src/goob_ai/: __init__.py  __main__.py  __version__.py  agent.py  ai_logger.py  aio_settings.py  asynctyper.py  base.py  bot.py  chromadb_manager.py  cli.py  constants.py  debugger.py  discordbot.py  downloader.py  goob_bot.py  graph.py  helpers.py  llm_manager.py  metrics.py  redis_memory.py  settings_validator.py  types.py  user_input_enrichment.py
src/goob_ai/bot_logger/: __init__.py
src/goob_ai/clients/: http_client.py
src/goob_ai/cogs/: agentcommands.py  devcommands.py  general.py  imagecaption.py  messagehandler.py  pygbot.py  summarizer.py  youtubesummarize.py
src/goob_ai/common/: dataclasses.py
src/goob_ai/core/: base.py  errors.py
src/goob_ai/db/: __init__.py
src/goob_ai/exceptions/: __init__.py
src/goob_ai/factories/: __init__.py  cmd_factory.py  guild_factory.py
src/goob_ai/helpers/: checks.py  constants.py  custom_memory.py  db_manager.py
src/goob_ai/monitoring/: sentry.py
src/goob_ai/services/: __init__.py  chroma_service.py  cromadb_service.py  image_service.py  (+3 more)
tasks/: README.md  __init__.py  _setup.py  ci.py  console.py  constants.py  db.py  git.py  iops.py  local.py  program.py  symbols.py  utils.py  view.py  watch.py
tests/: conftest.py  test_agent.py  test_aio_settings.py  test_async_typer.py  test_bot.py  test_cli.py  test_db.py  test_e2e.py  test_introspect.py  test_services.py
tests/clients/: http_client_test.py  test_async_http_client.py
tests/evals/: test_langsmith_evals_tool_selection.py
tests/resources/: utils.py
tests/services/: test_chroma_service.py  test_pgvector_service.py
tests/tools/: test_rag_tool.py
tests/utils/: test__async.py  test_base.py  test_devices.py  test_file_functions.py  test_imgops.py  test_timer.py  test_vidops.py  test_writer.py
typings/better_exceptions/: __init__.pyi  __main__.pyi  color.pyi  context.pyi  encoding.pyi  formatter.pyi  log.pyi  repl.pyi
typings/bpdb/: __init__.pyi  debugger.pyi
typings/discord/: player.pyi
typings/imutils/: text.pyi
typings/logging_tree/: __init__.pyi  format.pyi  nodes.pyi
typings/pinecone/: __init__.pyi  deprecation_warnings.pyi  exceptions.pyi
typings/scipy/: __config__.pyi  __init__.pyi  conftest.pyi  version.pyi
typings/torchvision/: __init__.pyi  _internally_replaced_utils.pyi  _meta_registrations.pyi  _utils.pyi  extension.pyi  utils.pyi  version.pyi
typings/transformers/: __init__.pyi  activations.pyi  activations_tf.pyi  audio_utils.pyi  cache_utils.pyi  configuration_utils.pyi  convert_graph_to_onnx.pyi  convert_pytorch_checkpoint_to_tf2.pyi  convert_slow_tokenizer.pyi  convert_slow_tokenizers_checkpoints_to_fast.pyi  convert_tf_hub_seq_to_seq_bert_to_pytorch.pyi  debug_utils.pyi  deepspeed.pyi  dependency_versions_check.pyi  dependency_versions_table.pyi  dynamic_module_utils.pyi  feature_extraction_sequence_utils.pyi  feature_extraction_utils.pyi  file_utils.pyi  hf_argparser.pyi  hyperparameter_search.pyi  image_processing_utils.pyi  image_transforms.pyi  image_utils.pyi  keras_callbacks.pyi  modelcard.pyi  modeling_attn_mask_utils.pyi  modeling_flax_outputs.pyi  modeling_flax_pytorch_utils.pyi  modeling_flax_utils.pyi  modeling_outputs.pyi  modeling_tf_outputs.pyi  modeling_tf_pytorch_utils.pyi  modeling_tf_utils.pyi  modeling_utils.pyi  optimization.pyi  optimization_tf.pyi  processing_utils.pyi  pytorch_utils.pyi  safetensors_conversion.pyi  (+14 more)
typings/uritools/: __init__.pyi
typings/webcolors/: __init__.pyi  constants.pyi  conversion.pyi  html5.pyi  normalization.pyi  types.pyi
(+2000 files in other folders)
