[project]
name = "goob_ai"
version = "0.1.0"
description = "sandbox app to test discord.py with langchain tools"
authors = [
    {name = "Malcolm Jones", email = "bossjones@theblacktonystark.com"},
]
dependencies = [
    "fastapi==0.110.0",
    "boto3==1.34.41",
    "beautifulsoup4==4.10.0",
    "chardet==5.2.0",
    "langchain-community==0.0.33",
    "langchain-openai==0.0.8",
    "langchain==0.1.16",
    "openai==1.10.0",
    "pydantic-settings==2.1.0",
    "pydantic==2.6.1",
    "pypdf==4.0.1",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "striprtf==0.0.26",
    "tenacity==8.1.0",
    "requests==v2.31.0",
    "uvicorn==0.28.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "black==24.3.0",
    "boto3-stubs[essential]==1.34.79",
    "bpython==0.24",
    "flake8>=7.0.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "mypy-boto3==1.34.79",
    "pre-commit==3.2.2",
    "pydocstyle==6.3.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-sugar==1.0.0",
    "pytest==8.0.0",
    "pyupgrade==3.15.2",
    "requests-mock==1.11.0",
    "rich==13.7.1",
    "ruff==0.3.7",
    "types-beautifulsoup4==4.12.0.20240229",
    "types-boto==2.49.18.20240205",
    "types-mock==5.1.0.20240311",
    "types-requests<2.31.0.7",
]
"testvalidate-pyproject[all,store]==0.16" = []
