[project]
name = "goob_ai"
version = "0.1.0"
description = "sandbox app to test discord.py with langchain tools"
authors = [
    {name = "Malcolm Jones", email = "bossjones@theblacktonystark.com"},
]
dependencies = [
    "fastapi==0.110.0",
    "boto3==1.34.41",
    "beautifulsoup4==4.10.0",
    "chardet==5.2.0",
    "langchain-community==0.0.33",
    "langchain-openai==0.0.8",
    "langchain==0.1.16",
    "openai==1.10.0",
    "pydantic-settings==2.1.0",
    "pydantic==2.6.1",
    "pypdf==4.0.1",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "striprtf==0.0.26",
    "tenacity>=8.2.3",
    "requests==v2.31.0",
    "uvicorn==0.28.0",
    "aiocache>=0.12.2",
    "aiodebug>=2.3.0",
    "aiodns>=3.2.0",
    "aiofile>=3.8.8",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.5",
    "aiohttp-json-rpc>=0.13.3",
    "aiomonitor>=0.7.0",
    "aioprometheus[starlette]>=23.12.0",
    "aioreactive>=0.18.0",
    "aiosql>=10.1",
    "aiosqlite>=0.20.0",
    "attrs>=23.2.0",
    "better-exceptions>=0.3.3",
    "click-spinner>=0.1.10",
    "codetiming>=1.4.0",
    "discord-py>=2.3.2",
    "dropbox>=11.36.2",
    "factory-boy>=3.3.0",
    "faker>=25.0.1",
    "fonttools[woff]>=4.51.0",
    "fuzzywuzzy[speedup]>=0.18.0",
    "gallery-dl>=1.26.9",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "gutter>=0.5.0",
    "html5lib>=1.1",
    "imageio>=2.34.1",
    "imutils>=0.5.4",
    "logging-tree>=1.9",
    "loguru>=0.7.2",
    "lxml>=5.2.1",
    "markdown>=3.6",
    "markdownify>=0.12.1",
    "matplotlib>=3.8.4",
    "md2pdf>=1.0.1",
    "memory-profiler>=0.61.0",
    "motor>=3.4.0",
    "multiprocess>=0.70.16",
    "mutagen>=1.47.0",
    "numpy>=1.26.4",
    "passlib[bcrypt]>=1.7.4",
    "Pillow>=10.3.0",
    "prettytable>=3.10.0",
    "pycryptodome>=3.20.0",
    "pygments>=2.17.2",
    "pyinspect>=0.1.0",
    "PyPDF2>=3.0.1",
    "pypi-command-line[speedups]>=1.7.1",
    "pytablewriter[html]>=1.2.0",
    "python-Levenshtein>=0.25.1",
    "python-slugify>=8.0.4",
    "pytz>=2024.1",
    "redis>=5.0.4",
    "scenedetect[opencv]>=0.6.3",
    "sentencepiece>=0.2.0",
    "simpletransformers>=0.70.0",
    "soupsieve>=2.5",
    "streamlit>=1.34.0",
    "telnetlib3>=2.0.4",
    "tomli>=2.0.1",
    "tqdm>=4.66.4",
    "transformers>=4.40.1",
    "typer>=0.12.3",
    "Unidecode>=1.3.8",
    "uritemplate>=4.1.1",
    "uritools>=4.0.2",
    "validators>=0.28.1",
    "watchdog>=4.0.0",
    "webcolors>=1.13",
    "websockets>=12.0",
    "youtube-dl>=2021.12.17",
    "yt-dlp>=2024.4.9",
    "docutils>=0.21.2",
    "pyinvoke>=1.0.4",
    "pathlib-mate>=1.3.2",
    "lazy-object-proxy>=1.10.0",
    "httpx[http2]>=0.27.0",
    "python-json-logger>=2.0.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "black==24.3.0",
    "boto3-stubs[essential]==1.34.79",
    "bpython==0.24",
    "flake8>=7.0.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "mypy-boto3==1.34.79",
    "pre-commit==3.2.2",
    "pydocstyle==6.3.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-sugar==1.0.0",
    "pytest==8.0.0",
    "pyupgrade==3.15.2",
    "requests-mock==1.11.0",
    "rich==13.7.1",
    "ruff==0.3.7",
    "types-beautifulsoup4==4.12.0.20240229",
    "types-boto==2.49.18.20240205",
    "types-mock>=5.1.0.20240425",
    "types-requests>=2.31.0.20240406",
    "types-PyYAML>=6.0.12.20240311",
    "types-aiofiles>=23.2.0.20240403",
    "types-click>=7.1.8",
    "types-colorama>=0.4.15.20240311",
    "types-dataclasses>=0.6.6",
    "types-freezegun>=1.1.10",
    "types-pytz==2024.1.0.20240203",
    "types-setuptools>=69.5.0.20240423",
    "types-six>=1.16.21.20240425",
    "MonkeyType>=23.3.0",
    "hunter>=3.7.0",
    "sourcery>=1.16.0",
    "types-html5lib==1.1.11.20240228",
    "types-pillow==10.2.0.20240213",
    "types-pyasn1==0.6.0.20240402",
    "types-python-jose==3.3.4.20240106",
    "typing-extensions==4.10.0",
    "pyright>=1.1.361",
    "pytest-rerunfailures>=14.0",
    "pytest-asyncio>=0.23.6",
]
"testvalidate-pyproject[all,store]==0.16" = []
